# network-algorithms

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: maximum_flow_bench.rs  minimum_cost_flow_bench.rs
benches/tools/: download.sh
examples/: branching.rs  generalized_maximum_flow.rs  graph.rs  maximum_bipartite_matching.rs  maximum_flow.rs  maximum_matching.rs  minimum_cost_flow.rs  primal_network_simplex.rs  shortest_path.rs
src/: algorithms.rs  graph.rs  lib.rs  prelude.rs  traits.rs
src/algorithms/: branching.rs  gomory_hu.rs  maximum_flow.rs  minimum_cost_flow.rs  mod.rs  shortest_path.rs  spanning_tree.rs
src/core/: bipartite_graph.rs  direction.rs  graph.rs  ids.rs  mod.rs  numeric.rs
src/data_structures/: bit_vector.rs  mod.rs  radix_heap.rs  rollback_union_find.rs  simple_queue.rs  skew_heap.rs  union_find.rs
src/edge/: capacity.rs  capacity_cost.rs  capacity_gain.rs  mod.rs  weight.rs
src/generalized_maximum_flow/: csr.rs  highest_gain_path.rs  mod.rs  primal_dual.rs  primal_dual_push_relabel.rs
src/graph/: bipartite_graph.rs  direction.rs  edge.rs  graph.rs  ids.rs  iter.rs  minimum_cost_flow_graph.rs  mod.rs  node.rs  shortest_path_graph.rs
src/maximum_bipartite_matching/: bipartite_graph.rs  hopcroft_karp.rs  mod.rs
src/maximum_flow/: capacity_scailing.rs  capacity_scaling.rs  csr.rs  dinic.rs  edmonds_karp.rs  ford_fulkerson.rs  (+5 more)
tests/: assignment.rs  branching.rs  generalized_maximum_flow.rs  maximum_bipartite_matching.rs  maximum_flow.rs  maximum_matching.rs  minimum_cost_flow.rs  shortest_path.rs  spanning_tree.rs
(+432 files in other folders)
