[package]
name = "network-algorithms"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MitI-7/network-algorithms"

[dependencies]
num-traits = "0.2.19"
rstest = "0.25.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
members = ["benches/dimacs"]