[package]
name = "network-algorithms"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MitI-7/network-algorithms"

[dependencies]
rstest = "0.25"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "minimum_cost_flow_bench"
harness = false

[[bench]]
name = "maximum_flow_bench"
harness = false